src/objects/Higher_Logic_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores key information regarding the integration with Higher Logic</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>Stores the API key required to push data into Higher Logic</description>
        <label>API Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Higher Logic Push API endpoint</description>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tenant_Code__c</fullName>
        <description>Stores the IATA community tenant code in Higher Logic</description>
        <label>Tenant Code</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Higher Logic Settings</label>
</CustomObject>